--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-server.port = 8080
-java.version=1.8
+#Database Configuration
+db.driver=org.h2.Driver
+db.url=jdbc:h2:mem:datajpa
+db.username=sa
+db.password=
 
-#spring.datasource.url = jdbc:h2:mem:app_db;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.url = jdbc:h2:file:~/h2/app_db;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username = sa
-spring.datasource.password =
-spring.datasource.driverClassName = org.h2.Driver
-spring.jpa.hibernate.ddl-auto = update
+#Hibernate Configuration
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create-drop
+hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+hibernate.show_sql=false
+hibernate.format_sql=true
